src/App.scss
body {
	background: #ffffff;
	height: 100%;
  width: 100%;
  zoom: 150%;
  display: grid;
  place-items: center;
}

ul,li {
	margin:0;
	padding:0;
}

h1,h3 {
  color: rgb(0, 0, 0);
  text-align: center;
}

h1 {
  font-size: 60px;
}

footer {
  margin-top: 50px;
}

.content {
  box-shadow: 0px 0px 25px 15px #fff;
  box-sizing: border-box;
  display: flex;
  justify-content: center;
  position: relative;
  height: 221px;
  width: 750px;
}

.abacus-list {
  margin: 0 auto;
  border: solid black 12px;
  border-radius: 25px;
  white-space: nowrap;
}

.ab-item {
  display: inline-table;
}

.up-beads-container {
	height: 55px;
	width: 40px;
  overflow: hidden;
	position: relative;
  display: flex;
  justify-content: center;
  border-bottom-style: none;
}

.down-beads-container {
	height: 130px;
	width: 40px;
  overflow: hidden;
  position: relative;
  display: flex;
  justify-content: center;
  margin: 0px;
  padding: 0px;
}

.up-vertical-pole, .down-vertical-pole {
  border-style: solid;
  border: 3px solid;
}

svg {
  position: absolute;
  top: 15px;
}

.upbead {
  top: -5px;
}

// .upbead::before {
//   content: '';
//   z-index: 1;
//   position: absolute;
//   top: -18px;
//   border-left: 17px solid transparent;
//   border-right: 17px solid transparent;
//   border-bottom: 17px solid red;
//   border-top: 0px solid transparent;
// }

// .upbead::after {
//   content: '';
//   z-index: 1;
//   position: absolute;
//   top: 1px;
//   border-left: 17px solid transparent;
//   border-right: 17px solid transparent;
//   border-top: 17px solid red;
// }


#source {
  color: #fff;
  margin-left: 10px;
}

.downbead {
  position: absolute;
  bottom: -5px;
  width: 34px;
  height: 34px;
  background: url('./components/bead.svg');
}


.downbead:nth-child(1) {
	bottom: 70px;

}

.downbead:nth-child(2) {
	bottom: 45px;

}

.downbead:nth-child(3) {
	bottom: 20px;
}

.up-vertical-pole-center-line {
  height: 12px;
  background-color: black;
  display: flex;
  justify-content: center;
}

.ab-item:nth-child(3) {
  .up-vertical-pole-center-line {
    .up-vertical-pole-center-dot {
      z-index: 15;
      height: 10px;
      width: 10px;
      border-radius: 10px;
      background-color: white;
    } 
  }
}

.ab-item:nth-child(6) {
  .up-vertical-pole-center-line {
    .up-vertical-pole-center-dot {
      z-index: 15;
      height: 10px;
      width: 10px;
      border-radius: 10px;
      background-color: white;
    } 
  }
}

.ab-item:nth-child(9) {
  .up-vertical-pole-center-line {
    .up-vertical-pole-center-dot {
      z-index: 15;
      height: 10px;
      width: 10px;
      border-radius: 10px;
      background-color: white;
    } 
  }
}

.ab-item:nth-child(12) {
  .up-vertical-pole-center-line {
    .up-vertical-pole-center-dot {
      z-index: 15;
      height: 10px;
      width: 10px;
      border-radius: 10px;
      background-color: white;
    } 
  }
}

.ab-item:nth-child(15) {
  .up-vertical-pole-center-line {
    .up-vertical-pole-center-dot {
      z-index: 15;
      height: 10px;
      width: 10px;
      border-radius: 10px;
      background-color: white;
    } 
  }
}

.left-line {
  position: absolute;
  top: 35px;
  left: 29px;
  height: 150px;
  width: 4px;
  background-color: #4d4d4d;
  border-radius: 5px;
}

.top-line {
  position: absolute;
  top: 2px;
  left: 80px;
  height: 4px;
  width: 590px;
  background-color: #4d4d4d;
  border-radius: 5px;
}

.right-line {
  position: absolute;
  top: 35px;
  right: 29px;
  height: 150px;
  width: 4px;
  background-color: #4d4d4d;
  border-radius: 5px;
}

.bottom-line {
  position: absolute;
  bottom: 5px;
  left: 80px;
  height: 4px;
  width: 590px;
  background-color: #4d4d4d;
  border-radius: 5px;
}

h1 {
  display:inline-block;
  vertical-align: middle;
}

header {
  text-align: center;
  vertical-align: middle;
  margin-bottom:50px;
}

.pannel {
  position: fixed;
  bottom: 10px;
  right: 10px;
  display: grid;
  place-items: center;
  button {
    height: 40px;
    width: 40px;
    display: grid;
    place-items: center;
    border-radius: 50px;
    background: #F2E401;
    color: #ffffff;
    font-size: 16px;
    transition: .5s;
  }

  button:hover {
    background: #F2E401;
    color:white;
    outline: 1px solid white;
  }
  
  #result {
    display:inline-block;
    position: absolute;
    width:80px;
    height: 30px;
    line-height: 30px;
    left: 150px;
    bottom: 20px;
    color: white;
    font-size:1.9em;
    letter-spacing: 0.1em;
    text-shadow: 2px 2px 2px #fefefe;
  }
}

@media (max-width: 767px) {
  body {
    transform: rotate(90deg);
    background: #ffffff;
    zoom: 110%;
    display: grid;
    place-items: center;
    padding: 0px 50px;
  }
  .content {
    box-shadow: 0px 0px 25px 15px #fff;
    box-sizing: border-box;
    display: flex;
    justify-content: center;
    position: relative;
    height: 221px;
    width: 750px;
  }

  .up-beads-container {
    height: 55px;
    width: 32px;
    overflow: hidden;
    position: relative;
    display: flex;
    justify-content: center;
    border-bottom-style: none;
  }

  .down-beads-container {
    height: 130px;
    width: 32px;
    overflow: hidden;
    position: relative;
    display: flex;
    justify-content: center;
    margin: 0px;
    padding: 0px;
  }
  
  .left-line {
    position: absolute;
    top: 35px;
    left: 90px;
    height: 150px;
    width: 4px;
    background-color: #4d4d4d;
    border-radius: 5px;
  }

  .top-line {
    position: absolute;
    top: 2px;
    left: 130px;
    height: 4px;
    width: 490px;
    background-color: #4d4d4d;
    border-radius: 5px;
  }

  .right-line {
    position: absolute;
    top: 35px;
    right: 90px;
    height: 150px;
    width: 4px;
    background-color: #4d4d4d;
    border-radius: 5px;
  }

  .bottom-line {
    position: absolute;
    bottom: 5px;
    left: 130px;
    height: 4px;
    width: 490px;
    background-color: #4d4d4d;
    border-radius: 5px;
  }

  .pannel {
    position: fixed;
    bottom: -80px;
    right: -250px;
    button {
      height: 40px;
      width: 40px;
      display: grid;
      place-items: center;
      border-radius: 50px;
      background: #F2E401;
      color: #ffffff;
      font-size: 16px;
      transition: .5s;
    }
  
    button:hover {
      background: #F2E401;
      color:white;
      outline: 1px solid white;
    }
    
    #result {
      display: inline-block;
      position: absolute;
      width: 80px;
      height: 30px;
      line-height: 30px;
      left: 150px;
      bottom: 20px;
      color: white;
      font-size:1.9em;
      letter-spacing: 0.1em;
      text-shadow: 2px 2px 2px #fefefe;
    }
  }
}

